--- a/src/app/component/todo-list/todo-list.component.html
+++ b/src/app/component/todo-list/todo-list.component.html
@@ -1,1 +1,3 @@
-<p>todo-list works!</p>
+<!-- |async = todo$.subscribe(next()) -->
+<!-- $event là todo truyền vào lúc emit -->
+<app-todo-item *ngFor="let todo of todo$|async" [todo]="todo" (changeStatus)="onChangeTodoStatus($event)"></app-todo-item>
