--- a/src/app/component/todo-input/todo-input.component.html
+++ b/src/app/component/todo-input/todo-input.component.html
@@ -1,1 +1,1 @@
-<p>todo-input works!</p>
+<input type="text" [(ngModel)]="todoContent" (keyup.enter)="onSubmit()" placeholder="What needs to be done?" required>
