--- a/src/app/component/todo-item/todo-item.component.html
+++ b/src/app/component/todo-item/todo-item.component.html
@@ -1,1 +1,18 @@
-<p>todo-item works!</p>
+<div class="todo-item d-flex justify-content-between align-items-center" (mouseover)="isHovered=true" (mouseout)="isHovered=false">
+  <div class="todo">
+    <!-- checked sẽ được truyền từ source đến view sau đó từ view về source thông qua change -->
+    <input type="checkbox" [id]="todo.id" [ngClass]="{checked: todo.isCompleted}" class="toggle text-center" [checked]="todo.isCompleted" (change)="changeTodoStatus()">
+    <label [for]="todo.id">{{todo.content}}</label>
+  </div>
+  <div class="d-flex align-items-center">
+    <span class="icon-wrapper text-center edit" [hidden]="todo.isCompleted" [ngClass]="{active:isHovered}">
+      <i class="eva eva-edit-outline" (click)="isEditing=true"></i>
+    </span>
+    <span class="icon-wrapper text-center edit" [ngClass]="{active:isHovered}">
+      <i class="eva eva-close" (click)="isEditing=true"></i>
+    </span>
+  </div>
+  <form class="edit-form" (keyup)="submitEdit($event)" *ngIf="isEditing">
+    <input type="text" name="editTodo" [(ngModel)]="todo.content">
+  </form>
+</div>
