--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,9 +1,10 @@
 <div class="footer w-100">
    <div class="h-100 position d-flex justify-content-between align-items-center" style="top:0; bottom:0;left:0;right:0">
      <span class="items-count">{{length}} item{{length>1?'s':''}}</span>
-     <div>
-       <button type="button" class="filter-btn" *ngFor="let btn of filterButtons" [ngClass]="{'active':btn.isActive}">{{btn.label}}</button>
+     <div *ngFor="let btn of filterButtons">
+       <button type="button" class="filter-btn" [ngClass]="{ active:btn.isActive}" (click)="filter(btn.type)">{{btn.label}}</button>
      </div>
-     <button class="filter-btn clear-completed-btn">Clear Comleted</button>
+     <button class="filter-btn clear-completed-btn" [ngClass] = "{'visible':hasCompleted$|async}" (click)="clearCompleted()">Clear Completed</button>
    </div>
 </div>
+<!-- <button type="button"  (click)="filter2()">abx</button> -->
