--- a/src/app/component/footer/footer.component.scss
+++ b/src/app/component/footer/footer.component.scss
@@ -3,7 +3,7 @@
   height: 40px;
   border-top: 1px solid rgba(0,0,0,0.1);
   &:before{
-    content: '';
+    //content: '';
     position: absolute;
     right: 0;
     bottom: 0;
@@ -27,7 +27,7 @@
     }
   }
   & .clear-completed-btn{
-    visibility: visible;
+    visibility: hidden;
     & .visible{
       visibility: visible;
     }
